--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "http-server": "^14.1.1",
     "vue": "^3.5.20",
     "typescript": "^5.9.2"
+  },
+  "rules": {
+    "no-unused-vars": "off"
   }
 }
